<resources>
    <string name="app_name">Oxy</string>
    <string name="check_box">Stay logged in</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="signUptitle">Set-up your Username and Password </string>
    <string name="signUptitle2">for the first time.</string>
    <string name="username">Username</string>
    <string name="enter_username">Please provide Username (e.g.:"J. Dela Cruz)</string>
    <string name="last_name">Last name</string>
    <string name="signup_password">Password:</string>
    <string name="new_password">Set-up new password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="save">Save</string>
    <string name="select_classroom">SELECT CLASSROOM</string>
    <string name="room101">ROOM01</string>
    <string name="room102">ROOM02</string>
    <string name="log_out">Log out</string>
    <string name="sanitize">SANITIZE</string>
    <string name="Aqi_lvl_num">0</string>
    <string name="Aqi_label_indoor_air">Indoor Air</string>
    <string name="Aqi_label_aqi">AQI</string>
    <string name="Aqi_lvl_desc">Good</string>
    <string name="Aqi_lvl_desc_moderate">Moderate</string>
    <string name="Aqi_lvl_desc_unhealthy1">Unhealthy</string>
    <string name="Aqi_lvl_desc_unhealthy2">Unhealthy</string>
    <string name="Aqi_lvl_desc_veryunhealthy">Very Unhealthy</string>
    <string name="Aqi_lvl_desc_hazardous">Hazardous</string>
    <string name="aqi_level_subdesc">for sensitive groups</string>
    <string name="Co_label_co">CO</string>
    <string name="Co_lvl_num">0</string>
    <string name="Voc_Label_voc">VOC</string>
    <string name="Voc_lvl_num">0</string>
    <string name="connecting">Loading "Room 01"</string>
    <string name="connecting1">Loading "Room 01".</string>
    <string name="connecting2">Loading "Room 01"..</string>
    <string name="connecting3">Loading "Room 01"...</string>
    <string name="connectingr2">Loading "Room 02"</string>
    <string name="connecting1r2">Loading "Room 02".</string>
    <string name="connecting2r2">Loading "Room 02"..</string>
    <string name="connecting3r2">Loading "Room 02"...</string>
    <string name="misting_text"> Misting</string>
    <string name="misting_text1"> Misting.</string>
    <string name="misting_text2"> Misting..</string>
    <string name="misting_text3"> Misting...</string>
    <string name="soaking_text"> Soaking</string>
    <string name="soaking_text1"> Soaking.</string>
    <string name="soaking_text2"> Soaking..</string>
    <string name="soaking_text3"> Soaking...</string>
    <string name="exhausting_text"> Exhausting</string>
    <string name="exhausting_text1"> Exhausting.</string>
    <string name="exhausting_text2"> Exhausting..</string>
    <string name="exhausting_text3"> Exhausting...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Reports</string>
    <string name="account_email">user@sample.com</string>
    <string name="account_user_name">Administrator</string>
    <string name="rooms">Rooms</string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <string name="title_activity_fetch_ui">fetch_ui</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="store_text">%1$s</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="oxy_about_desc">Oxy is a cutting-edge Smart Air Sanitizer and Real-time Indoor Air Pollution Monitoring System designed specifically for the College of Sciences Technology and Communication Inc. Senior High School classrooms. </string>
    <string name="oxy_about_desc_p2">The objective of Oxy is to develop a smart air sanitation system with mobile application, equipped with an indoor air pollution monitoring system specifically design for school classrooms to reduce indoor air contaminants and pollutants that can help maintain a healthy environment and better indoor air quality.</string>
    <string name="oxy_kf_1">Oxy provides continuous monitoring of indoor air quality parameters such as particulate such as Volatile Organic compounds (VOC) and Carbon Monoxide (CO). </string>
    <string name="oxy_kf_2">Oxy is equipped with smart air sanitization technology to eliminate pollutants, presence of harmful air pollutants like bacteria, viruses in air. </string>
    <string name="oxy_guide_p1">The AQI or Air Quality Index is an index for reporting daily air quality. It tells you how clean or polluted your air is, and what associated health effects might be a concern for you. The AQI focuses on health effects you may experience within a few hours or days after breathing polluted air.</string>
    <string name="oxy_guide_50p">| Air quality is satisfactory, and air pollution poses little or no risk.</string>
    <string name="oxy_guide_100p">| Air quality is acceptable. However, there may be a risk for some people, particularly those who unusually sensible to air pollution.</string>
    <string name="oxy_guide_150p">| Members of sensitive groups may experience health effect. The general public is less like to be affected. </string>
    <string name="oxy_guide_151p">| Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects.</string>
    <string name="oxy_guide_201p">| Health warnings of emergency conditions. The entire population is more likely affected.</string>
    <string name="oxy_guide_301p">| Health alert: everyone may experience more serious health effects.</string>
    <string name="termsAndcon">Welcome to the Oxy - Smart Air Sanitizer and Real-time Indoor Air Pollution Monitoring System! These terms govern the usage of the System and incorporate provisions addressing human error or intervention.</string>
    <string name="devideInstall">Ensure proper placement of Oxy units within each classroom for optimal air circulation.</string>
    <string name="mobileSetup">The administrator will provide the application along with the account that has also been furnished by the admin. Download and install the Oxy mobile application that was given by the administrator. Connect the application to the Oxy system using the provided credentials. Follow the on-screen instructions for initial setup.</string>
    <string name="termsAndcon2">By utilizing the Oxy System, you acknowledge that you have read, understood, and agreed to comply with the following terms and conditions. Should any part of these terms be disagreeable to you, refrain from using the System.</string>
    <string name="termsAndCo">The Oxy - Smart Air Sanitizer and Android mobile application is exclusively accessible to Senior High School faculty members including teachers and Program Head, Utility Personnel, members of the College of Sciences Technology and Communication Inc. Senior High School.</string>
    <string name="termsAndCon">Users are required to use an account provided by the administrator to access the System and Android application. All information provided during the account creation process must be accurate, and users are responsible for maintaining the confidentiality of their account credentials.</string>
    <string name="termAndCon2">The Institution reserves the right to suspend, modify, or terminate user access to the System at its sole discretion, without prior notice.</string>
    <string name="termsAndCon3">Unauthorized attempts to access, modify, or tamper with the System or its components are strictly prohibited. Any such attempts may result in disciplinary action and legal consequences.</string>
    <string name="termAndCon3_1">The Oxy - Smart Air Sanitizer is provided solely to enhance indoor air quality within designated Senior High School classrooms.</string>
    <string name="termAndCon3_2">Users are strictly prohibited from tampering with, dismantling, or misusing the Oxy device. Any unauthorized modifications or interference, including human error, may result in termination of account.</string>
    <string name="_4_real_time_indoor_air_pollution_monitoring">4. REAL-TIME INDOOR AIR POLLUTION MONITORING</string>
    <string name="the_oxy_smart_air_sanitizer_collects_real_time_indoor_air_pollution_data_for_monitoring_purposes_users_acknowledge_that_errors_inaccuracies_or_discrepancies_may_arise_due_to_human_intervention_or_system_malfunctions">The Oxy - Smart Air Sanitizer collects real-time indoor air pollution data for monitoring purposes. Users acknowledge that errors, inaccuracies, or discrepancies may arise due to human intervention or system malfunctions.</string>
    <string name="the_institution_is_committed_to_protecting_user_privacy_personal_information_collected_will_be_handled_in_accordance_with_applicable_data_protection_laws_and_the_institution_s_privacy_policy">The Institution is committed to protecting user privacy. Personal information collected will be handled in accordance with applicable data protection laws and the Institution\'s privacy policy.</string>
    <string name="users_must_adhere_to_all_applicable_laws_and_regulations_while_using_the_system">Users must adhere to all applicable laws and regulations while using the System.</string>
    <string name="users_are_encouraged_to_promptly_report_any_issues_concerns_or_malfunctions_related_to_the_oxy_smart_air_sanitizer_including_those_arising_from_human_error_to_the_relevant_authorities_such_as_the_administrator">Users are encouraged to promptly report any issues, concerns, or malfunctions related to the Oxy - Smart Air Sanitizer including those arising from human error, to the relevant authorities such as the administrator.</string>
    <string name="the_institution_and_developers_shall_not_be_liable_for_any_indirect_incidental_special_consequential_or_punitive_damages_arising_out_of_or_in_connection_with_the_use_of_the_system_including_those_resulting_from_human_error_or_intervention">The Institution and developers shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of or in connection with the use of the System, including those resulting from human error or intervention.</string>
    <string name="the_cstc_institution_reserves_the_right_to_modify_or_revise_these_terms_at_any_time_users_will_be_notified_of_significant_changes_through_appropriate_channels">The CSTC Institution reserves the right to modify or revise these terms at any time. Users will be notified of significant changes through appropriate channels.</string>
    <string name="the_institution_may_terminate_user_access_to_the_system_at_any_time_for_violation_of_these_terms_or_any_other_reason_deemed_appropriate_by_the_institution">The Institution may terminate user access to the system at any time for violation of these terms or any other reason deemed appropriate by the Institution.</string>
    <string name="by_using_the_oxy_you_acknowledge_and_agree_to_the_terms_and_conditions_outlined_above_recognizing_the_potential_for_errors_or_interventions_whether_intentional_or_unintentional_failure_to_comply_with_these_terms_may_result_in_the_suspension_or_termination_of_your_access_to_the_system">By using the Oxy, you acknowledge and agree to the terms and conditions outlined above, recognizing the potential for errors or interventions, whether intentional or unintentional. Failure to comply with these terms may result in the suspension or termination of your access to the system.</string>
</resources>